--- a/style.css
+++ b/style.css
@@ -35,6 +35,27 @@ h1 {
     transform: translate(-50%, -50%);
 }
 
+.index-container {
+    height: auto;
+    padding: 16px;
+    background: transparent;
+    border: 4px solid transparent;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    justify-content: center;
+}
+
+.index-item {
+    width: 350px;
+    height: 200px;
+    padding: 8px;
+    border: 4px solid transparent;
+    display: flex;
+    border-radius: 25%;
+    background: papayawhip;
+}
+
 .flexlist {
     display: inline-flex;
     list-style: none;
