Tweak style and index

--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ h1 {
     width: 350px;
     height: 200px;
     padding: 8px;
-    border: 4px solid transparent;
+    border: 4px solid paleturquoise;
     display: flex;
     border-radius: 25%;
-    background: papayawhip;
+    background: transparent;
+    border-style: dotted;
 }
 
 .flexlist {
@@ -69,8 +70,8 @@ h1 {
 a:hover {
     border: 2px solid transparent;
     border-radius: 5px;
-    color: lightgoldenrodyellow;
-    background-color: rgb(116, 119, 102);
+    color: black;
+    background-color: paleturquoise;
     text-decoration: none;
     margin: 0 auto;
 }
