--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(248, 231, 134);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h3 {
@@ -58,6 +58,10 @@ h1 {
     align-items: center;
 }
 
+.small {
+    font-size: 12px;
+}
+
 .flexlist {
     display: inline-flex;
     list-style: none;
@@ -67,10 +71,39 @@ h1 {
 }
 
 a:hover {
-    border: 2px solid transparent;
-    border-radius: 5px;
+    border-radius: 1em;
     color: black;
     background-color: paleturquoise;
     text-decoration: none;
-    margin: 0 auto;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+a:visited {
+    color: grey;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background: paleturquoise;
+    position: relative;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    text-decoration: none;
+    gap: 25px;
+    margin: 0;
+    border-radius: 1em;
+}
+
+.footer a:hover {
+    background-color: lightgoldenrodyellow; 
+    color: paleturquoise; 
 }
